<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical" 
    android:layout_height="fill_parent">
    <LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal" 
	    android:layout_height="wrap_content">   
	
		<TextView 
	    	android:text="@string/madera" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>	
		<EditText
			android:id="@+id/Txtmadera"
			android:numeric="integer"			
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
		<TextView 
	    	android:text="@string/adobe" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>	
		<EditText
			android:id="@+id/Txtadobe"
			android:numeric="integer"	
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
		<TextView 
	    	android:text="@string/juncos" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>	
		<EditText
			android:id="@+id/Txtjunco"
			android:numeric="integer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
	</LinearLayout>   		
   	
   	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal" 
	    android:layout_height="wrap_content">
	    
	    <TextView 
	    	android:text="@string/hogar" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>
	    <CheckBox	    	 
	    	android:id="@+id/checkBoxHogar" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </CheckBox>	
	
	    
	    <TextView 
	    	android:text="@string/cocina" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>
	    <CheckBox	    	 
	    	android:id="@+id/checkBoxCocina" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </CheckBox>	
	
	    
	    <TextView 
	    	android:text="@string/pozo" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>
	    <CheckBox	    	 
	    	android:id="@+id/checkBoxPozo" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </CheckBox>	
	</LinearLayout>	
   	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal" 
	    android:layout_height="wrap_content">
	    
	        
	    <TextView 
	    	android:text="@string/hornoPiedra" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>
	    <CheckBox	    	 
	    	android:id="@+id/checkBoxHornoPiedra" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </CheckBox>
	    
	    <TextView 
	    	android:text="@string/hornoAdobe" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>
	    <CheckBox	    	 
	    	android:id="@+id/checkBoxHornoAdobe" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </CheckBox>		
	</LinearLayout>
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal" 
	    android:layout_height="wrap_content">
	    
	    <TextView 
	    	android:text="@string/ebanisteria" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>
	    <CheckBox	    	 
	    	android:id="@+id/checkBoxEbanisteria" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </CheckBox>	

	    
	    <TextView 
	    	android:text="@string/alfareria" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>
	    <CheckBox	    	 
	    	android:id="@+id/checkBoxAlfareria" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </CheckBox>	

	    
	    <TextView 
	    	android:text="@string/cesteria" 
	    	android:id="@+id/textView1" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </TextView>
	    <CheckBox	    	 
	    	android:id="@+id/checkBoxCesteria" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content">
	    </CheckBox>	
	</LinearLayout>
   	
   	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
 
		<Button 
			android:text="Ok" 
			android:id="@+id/botonCartas" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
		</Button>
 
	</LinearLayout>
   	 
</LinearLayout>
